# ot-harjoitustyo-uusi

./: README.md  pyproject.toml
budget-app/: .env  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
budget-app/data/: database.sqlite
budget-app/dokumentaatio/: RequirementSpecification.md  TimeManagement.md  arkkitehtuuri.md  changelog.md  testaus.md  user-guide.md
budget-app/src/: config.py  database_connection.py  index.py  initialize_database.py  pyproject.toml  schema.sql
budget-app/src/entities/: budget.py  incomes.py  spendings.py  user.py
budget-app/src/repositories/: budget_repository.py  incomes_repository.py  spendings_repository.py  user_repository.py
budget-app/src/services/: budget_service.py  income_service.py  spendings_service.py  user_service.py
budget-app/src/tests/repositories/: income_repository_test.py  spendings_repository_test.py  user_repository_test.py
budget-app/src/ui/: create_new_income_view.py  create_new_spending_view.py  create_user_view.py  incomes_list_view.py  logged_in_budget_view.py  login_view.py  spending_list_view.py  ui.py
laskarit/viikko1/: Version hallinta
laskarit/viikko2/kassapaate/: kassapaate.py  maksukortti.py
laskarit/viikko2/kassapaate/unicafe/unicafe/: .coverage
laskarit/viikko2/kassapaate/unicafe/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko3/: monopoli.md
