[project]
name = "budget-app"
version = "0.1.0"
description = ""
authors = [
    {name = "petrovaana",email = "petrova.anastasiahusu@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "invoke (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-dotenv (>=0.5.2,<0.6.0)"
]
