[project]
name = "budget-app"
version = "0.1.0"
description = ""
authors = [
    {name = "petrovaana",email = "petrova.anastasiahusu@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "invoke (>=2.2.1,<3.0.0)"
]

[tool.pylint]
init-hook = 'import sys; sys.path.append("src")'

[tool.pylint."MESSAGES CONTROL"]
disable = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "coverage (>=7.11.3,<8.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)"
]
